@@ -1,9 +1,7 @@
-function [eta_zero, eta_inf, lambda, m, n, R_square, eta_apparent_fit] = carreau_model_fit(gamma_dot, eta_apparent, report)
-% CARREAU_MODEL_FIT fits input data to a Cross type rheological model that fits a material's apparent viscosity as a function of shear rate
-%
-% 3DFM function
-% specific\rheology\models
-% last modified 11/20/08 (krisford)
+function [eta_zero, lambda, n, R_square, eta_apparent_fit] = carreau_chhabra_fit(gamma_dot, eta_apparent, report)
+% 3DFM function  
+% Rheology
+% last modified 2008.03.19
 %  
 % This function fits input data to a Cross type rheological model that fits
 % a materials apparent viscosity as a function of shear rate. The fitting parameters
@@ -34,45 +32,37 @@ function [eta_zero, eta_inf, lambda, m, n, R_square, eta_apparent_fit] = carreau
                        'ShowStatusWindow', 'on');
 
 	% initial guess
-    m        = 0.68;
     n        = 0.2;
     lambda   = 0.5;
     eta_zero = eta_apparent(1);
-%     eta_inf  = eta_apparent(end);
-    eta_inf  = 0.001;
     
 % % %     % normalize t and x
 % % %     t = t - min(t);    
 % % %     x = x - min(x);
     
-    init_cond = [m n lambda eta_zero eta_inf];
-    lower_bounds = [0   0  0  1e-4 0.0001];
-    upper_bounds = [Inf 1 Inf Inf Inf];
-     
+    init_cond = [n lambda eta_zero];
+    lower_bounds = [-2 0 1e-4];
+    upper_bounds = [2 Inf Inf];
+    
 % 	[fit, resnorm, residuals] = lsqcurvefit('carreau_model_fun', init_cond, gamma_dot, eta_apparent, [], [], options);
-	[fit, resnorm, residuals] = lsqnonlin('carreau_model_fun', init_cond, lower_bounds, upper_bounds, options, gamma_dot, eta_apparent);
+	[fit, resnorm, residuals] = lsqnonlin('carreau_chhabra_fun', init_cond, lower_bounds, upper_bounds, options, gamma_dot, eta_apparent);
 
     % standard deviation of measurements == rms of the residuals
 	rms_residuals = rms(residuals);
 	
-    m        = fit(1);
-    n        = fit(2);
-	lambda   = fit(3);
-	eta_zero = fit(4);
-	eta_inf  = fit(5);
-
-    % go to town.  this is our fitting function
-    eta_apparent_fit = (eta_zero - eta_inf) .* ( (1+ (lambda*gamma_dot).^m) .^ ((n-1)/m)) + eta_inf;
-
-    % compute R-square
-	resnorm = sum(eta_apparent_fit.^2);    
-    sse = resnorm;      % measure of the total deviation of the response
+	% compute R-square
+	sse = resnorm;      % measure of the total deviation of the response
                         % values from the fit to the response values
 	sst = sum((eta_apparent - mean(eta_apparent)).^2);
 	R_square = 1 - sse/sst;
+	    
+    n        = fit(1);
+	lambda   = fit(2);
+	eta_zero = fit(3);
     
-
-%     eta_apparent_fit = ((n-1)/m).*(log(eta_zero) + m.*log(lambda*gamma_dot));
+    % go to town.  this is our fitting function
+    eta_apparent_fit = eta_zero  .* ( (1+ (lambda*gamma_dot).^2) .^ ((n-1)/2));
+    
     
     if findstr(report, 'y')
         figure;
